--- a/Linear Regression- App or Website development Project.ipynb
+++ b/Linear Regression- App or Website development Project.ipynb
@@ -1243,8 +1243,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "website needs more focus to catch up with APP\n",
-    "App is already outperforming the website.\n",
+    "Website needs more focus to catch up with the App as it is already outperforming the website.\n",
+    "Also, website is not driving that much business, therefore they should focus on enhancing user experiencce of website. \n",
     "Increased avg. session and membership length can significantly increase the business."
    ]
   }
