--- a/Recommender System (content filtering).ipynb
+++ b/Recommender System (content filtering).ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1015aad1",
+   "id": "65a75d04",
    "metadata": {},
    "source": [
     "# Recommender System Using Python\n",
     "\n",
     "*Item similarity based recommender system/content filtering.*\n",
     "\n",
-    "*I have tried to build a recommendation model to recommand similar movies to the viewer by merging two dataframes userdata and moviedata based on correlation and movie ratings.*"
+    "*I have tried to build a recommendation model to recommand similar movies to the viewer by merging two dataframes userdata and moviedata based on correlation and number of movie ratings.*"
    ]
   },
   {
